--- a/public/Mobile.html
+++ b/public/Mobile.html
@@ -18,42 +18,56 @@
         <h2><i>1.Iphone15</i></h2>
         <p>
             <img src="/images/Iphone_15.png" width="250" height="200"/>
+            <p>Price: 95000</p>
+            <p>Colour: Light Pink</p>
             <hr/>
         </p>
 
         <h2><i>2.One_Plus_11R</i></h2>
         <p>
             <img src="/images/One_Plus_11R.jpg" width="250" height="200"/>
+            <p>Price: 35000</p>
+            <p>Colour: Grey</p>
             <hr/>
         </p>
 
         <h2><i>3.One_Plus_CE_3</i></h2>
         <p>
             <img src="/images/One_Plus_CE_3.jpg" width="250" height="200"/>
+            <p>Price: 40000</p>
+            <p>Colour: Blue</p>
             <hr/>
         </p>
 
         <h2><i>4.Realme_Narzo_60</i></h2>
         <p>
             <img src="/images/Realme_Narzo_60.jpg" width="250" height="200"/>
+            <p>Price: 45000</p>
+            <p>Colour: Orange</p>
             <hr/>
         </p>
 
         <h2><i>5.Samsung_Galaxy_s22_ultra</i></h2>
         <p>
             <img src="/images/Samsung_Galaxy_s22_ultra.jpg" width="250" height="200"/>
+            <p>Price: 120000</p>
+            <p>Colour: Voilet</p>
             <hr/>
         </p>
 
         <h2><i>6.Samsung_Galaxy_z_flip4</i></h2>
         <p>
             <img src="/images/Samsung_Galaxy_z_flip4.jpg" width="250" height="200"/>
+            <p>Price: 90000</p>
+            <p>Colour: Light Voilet</p>
             <hr/>
         </p>
 
         <h2><i>7.Tecno_Phantom_V_Fold</i></h2>
         <p>
             <img src="/images/Tecno_Phantom_V_Fold.jpg" width="250" height="200"/>
+            <p>Price: 105000</p>
+            <p>Colour: Black</p>
             <hr/>
         </p>
 
